<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C"
    tools:context=".src.signup.ProfileActivity">


    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/프로필_생성"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/ID_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/ID"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Nickname_text"
        app:layout_constraintEnd_toStartOf="@+id/profile_title"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <EditText
        android:id="@+id/ID_edit"
        android:layout_width="297dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/white"
        android:importantForAutofill="no"
        android:text="사용자 아이디"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/Nickname_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ID_text"
        app:layout_constraintVertical_bias="0.256"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields,TextSizeCheck" />

    <TextView
        android:id="@+id/Nickname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="452dp"
        android:text="@string/닉네임"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profile_title"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Nickname_edit"
        android:layout_width="295dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/white"
        android:text="사용자 닉네임"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_title"
        app:layout_constraintVertical_bias="0.472"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TextSizeCheck" />

    <android.widget.Button
        android:id="@+id/btn_register2"
        android:layout_width="294dp"
        android:layout_height="46dp"
        android:background="@drawable/edittext_rounded_corner_rectangle"
        android:text="@string/완료"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/ID_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:layout_marginEnd="54dp"
        android:text="*이미 존재하는 ID입니다"
        android:textColor="#2C2C2C"
        android:textSize="9sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ID_edit" />


</androidx.constraintlayout.widget.ConstraintLayout>