<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_black"
    tools:context=".src.main.TodoDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_todo_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/todo_detail_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.05"
        app:srcCompat="@drawable/ic_back_arrow"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/tb_todo_detail"
        app:layout_constraintStart_toStartOf="@id/tb_todo_detail"
        app:layout_constraintBottom_toBottomOf="@id/tb_todo_detail"
        android:scaleType="fitCenter"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.05"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_todo_unselected"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@id/tb_todo_detail"
        app:layout_constraintTop_toTopOf="@id/tb_todo_detail"
        app:layout_constraintBottom_toBottomOf="@id/tb_todo_detail"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tb_todo_detail"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_todo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="todo"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="삭제"
            android:layout_marginTop="2dp"
            android:textColor="#70FFFFFF"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_todo_title"
            app:layout_constraintTop_toTopOf="@id/tv_todo_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_todo_title"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_summary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintTop_toBottomOf="@id/tv_todo_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp">

            <View
                android:id="@+id/v_left_line"
                android:layout_width="1dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="1"
                android:background="#9B9B9B"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@id/v_left_line"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="1dp"/>
            
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@id/tv_priority"
                app:layout_constraintStart_toStartOf="@id/tv_priority"
                app:layout_constraintBottom_toTopOf="@id/tv_time"/>

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@id/tv_date"
                app:layout_constraintStart_toStartOf="@id/tv_priority"
                app:layout_constraintBottom_toTopOf="@id/tv_category"/>

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@id/tv_time"
                app:layout_constraintStart_toStartOf="@id/tv_priority"
                app:layout_constraintBottom_toTopOf="@id/tv_memo"/>

            <TextView
                android:id="@+id/tv_memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memo"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@id/tv_priority"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="1dp"/>

            <View
                android:id="@+id/v_middle"
                android:layout_width="1dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="1"
                android:background="#9B9B9B"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/tv_priority"
                app:layout_constraintTop_toTopOf="parent"/>

            <ToggleButton
                android:id="@+id/btn_priority"
                android:layout_width="40dp"
                android:layout_height="19dp"
                android:background="@drawable/important_selector"
                android:textOn=""
                android:textOff=""
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/v_middle"
                app:layout_constraintTop_toTopOf="@id/tv_priority"
                app:layout_constraintBottom_toBottomOf="@id/tv_priority"/>

            <ToggleButton
                android:layout_width="40dp"
                android:layout_height="19dp"
                android:background="@drawable/urgent_selector"
                android:textOn=""
                android:textOff=""
                app:layout_constraintStart_toEndOf="@id/btn_priority"
                app:layout_constraintTop_toTopOf="@id/btn_priority"
                android:layout_marginStart="4dp"/>

            <TextView
                android:id="@+id/tv_selected_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2023/1/7"
                android:textSize="13sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/btn_priority"
                app:layout_constraintTop_toTopOf="@id/tv_date"
                app:layout_constraintBottom_toBottomOf="@id/tv_date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="#B3B3B3"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@id/btn_priority"
                app:layout_constraintTop_toTopOf="@id/tv_time"
                app:layout_constraintBottom_toBottomOf="@id/tv_time"/>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ch_category_spinner"
                android:paddingHorizontal="5dp"
                app:layout_constraintStart_toStartOf="@id/btn_priority"
                app:layout_constraintTop_toTopOf="@id/tv_category"
                app:layout_constraintBottom_toBottomOf="@id/tv_category"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.77"
                app:layout_constraintStart_toStartOf="@id/btn_priority"
                android:textSize="13sp"
                android:maxLines="1"
                android:textColor="@color/white"
                android:paddingStart="0dp"
                android:text="11시까지 마무리해서 자정 전에 제출"
                app:layout_constraintTop_toTopOf="@id/tv_memo"
                app:layout_constraintBottom_toBottomOf="@id/tv_memo"/>


            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="1"
                android:background="#9B9B9B"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintWidth_percent="0.9"
            android:background="@drawable/ch_border_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_summary"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_lower_todo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingTop="15dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/et_lower_todo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:background="@null"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_lower_todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:outlineSpotShadowColor="@android:color/transparent"
                android:src="@drawable/ic_down_todo_add"
                app:borderWidth="0dp"
                app:fabSize="mini"
                android:theme="@style/FloatingBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>